--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "laravel/framework": "^9.32",
     "graylog2/gelf-php": "^2.0",
     "monolog/monolog": "^2.0",
-    "guzzlehttp/guzzle": ">=7.0",
+    "guzzlehttp/guzzle": ">=7.0"
   },
   "authors": [
     {
