--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": "^8.1",
     "ext-json": "*",
-    "laravel/framework": "^9.32|^10.0",
+    "laravel/framework": "^9.32|^10.0|^11.0",
     "graylog2/gelf-php": "^2.0",
     "monolog/monolog": "^3.0|^2.0",
     "guzzlehttp/guzzle": ">=7.0"
