--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
   "require": {
     "php": "^8.1",
     "ext-json": "*",
-    "laravel/framework": "^9.32|^10.0|^11.0",
-    "graylog2/gelf-php": "^2.0",
-    "monolog/monolog": "^3.0|^2.0",
+    "laravel/framework": "^9.32|^10.0|^11.0|^12.0",
     "guzzlehttp/guzzle": ">=7.0"
   },
   "authors": [
@@ -17,7 +15,7 @@
     }
   ],
   "license": "MIT",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "Laravel\\Foundation\\": [
